syntax = "proto3";

package xrunner.v1;

option go_package = "github.com/antonkrylov/xrunner/gen/go/xrunner/v1;xrunnerv1";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Session {
  string session_id = 1;
  string workspace_root = 2;
  string tool_bundle_path = 3;
  google.protobuf.Timestamp created_at = 4;
}

message CreateSessionRequest {
  string workspace_root = 1;
  string tool_bundle_path = 2;
}

message CreateSessionResponse {
  Session session = 1;
}

message ListSessionsRequest {}

message ListSessionsResponse {
  repeated Session sessions = 1;
}

message GetSessionRequest {
  string session_id = 1;
}

message AgentEvent {
  int64 event_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  string session_id = 3;
  EventLane lane = 4;

  oneof kind {
    SessionStarted session_started = 10;
    UserMessage user_message = 11;
    AssistantMessage assistant_message = 12;
    ToolCallStarted tool_call_started = 13;
    ToolOutputChunk tool_output_chunk = 14;
    ToolCallResult tool_call_result = 15;
    FileDiff file_diff = 16;
    Status status = 17;
    Error error = 18;
    ToolBundleLoaded tool_bundle_loaded = 19;
  }
}

enum EventLane {
  EVENT_LANE_UNSPECIFIED = 0;
  EVENT_LANE_HIGH = 1;
  EVENT_LANE_MEDIUM = 2;
  EVENT_LANE_LOW = 3;
}

message SessionStarted {
  string workspace_root = 1;
  string tool_bundle_path = 2;
}

message UserMessage {
  string text = 1;
}

message AssistantMessage {
  string text = 1;
  bool markdown = 2;
}

message ToolCallStarted {
  string tool_call_id = 1;
  string name = 2;
  string args_json = 3;
}

message ToolOutputChunk {
  string tool_call_id = 1;
  string stream = 2;
  bytes data = 3;
}

message ToolCallResult {
  string tool_call_id = 1;
  int32 exit_code = 2;
  string error_message = 3;
}

message FileDiff {
  string path = 1;
  string unified_diff = 2;
}

message Status {
  string phase = 1; // idle|thinking|running_tool
  string detail = 2;
}

message Error {
  string message = 1;
}

message ToolBundleLoaded {
  string path = 1;
  string schema_version = 2;
  string bundle_version = 3;
  repeated string tool_names = 4;
}

message ClientHello {
  string session_id = 1;
  int64 after_event_id = 2;
}

message ClientMsg {
  oneof kind {
    ClientHello hello = 1;
    UserMessage user_message = 2;
    ToolInvoke tool_invoke = 3;
    Cancel cancel = 4;
  }
}

message ToolInvoke {
  string name = 1;
  string args_json = 2;
}

message Cancel {
  string tool_call_id = 1; // optional
}

message StreamEventsRequest {
  string session_id = 1;
  int64 after_event_id = 2;
}

service SessionService {
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);
  rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse);
  rpc GetSession(GetSessionRequest) returns (Session);
  rpc StreamEvents(StreamEventsRequest) returns (stream AgentEvent);
  rpc Interact(stream ClientMsg) returns (stream AgentEvent);
  rpc DeleteSession(GetSessionRequest) returns (google.protobuf.Empty);
}
